--- a/app/views/articles/show.erb
+++ b/app/views/articles/show.erb
@@ -7,7 +7,7 @@
   <strong>Text:</strong>
   <%= @article.text %>
 </p>
-
+<a href="https://imgur.com/lYtc1KU"><img class="emma-pic-show" src="https://i.imgur.com/lYtc1KU.jpg" title="source: imgur.com" /></a>
 <h2>Comments</h2>
 <%= render @article.comments %>
 
