--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,64 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+* {
+  padding: 10px;
+  font-family: helvetica;
+}
+
+.title {
+  font-family: helvetica;
+  font-size: 60px;
+  /*float: right;*/
+  text-align: center;
+  display: inline-block;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 20px;
+  display: inline-block;
+  /*float: right;*/
+}
+
+.emma-pic {
+  height: 250px;
+  width: 300px;
+  display: inline-block;
+  float: left;
+}
+
+.emma-pic-show {
+  height: 450px;
+  width: 350px;
+  display: inline-block;
+  float: left;
+}
+
+#title-container {
+/*  background-image: url('/assets/ADLU2002.jpg') no-repeat*/
+  background-color: #5F9EA0;
+}
+
+.table {
+  padding: 15px;
+  text-align: left;
+  border: 1px solid;
+}
+
+.columns tr td {
+  /*border: 1px solid;*/
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #FFFFFF;
+  color: black;
+}
+
+.button {
+    background-color: #9370DB;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
