--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,26 +1,34 @@
 * {
-  padding: 10px;
+  padding: 5px;
   font-family: helvetica;
 }
 
+#header {
+  border-style: solid;
+}
+
+.first-content {
+  border-style: solid;
+}
+
 .title {
-  font-family: helvetica;
-  font-size: 60px;
-  /*float: right;*/
+  font-family: palatino;
+  font-size: 80px;
   text-align: center;
-  display: inline-block;
+  display: float;
+  /*border-style: solid;*/
 }
 
 .subtitle {
   text-align: center;
   font-size: 20px;
-  display: inline-block;
-  /*float: right;*/
+  display: float;
+
 }
 
 .emma-pic {
   height: 250px;
-  width: 300px;
+  width: 310px;
   display: inline-block;
   float: left;
 }
@@ -61,4 +69,44 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+
 }
+
+#title2 {
+  font-family: helvetica;
+  font-size: 100px;
+}
+
+.paragraph {
+  display: inline-block;
+}
+
+.content {
+  float: left;
+  padding: 10px 2% 10px 2%;
+  margin: 20px 1% 20px 2%;
+  background: #FFFFFF;
+  border: 5px solid #ccc;
+  width: 44%; /* ie5win fudge begins */
+  voice-family: "\"}\"";
+  voice-family:inherit;
+  width: 41%;
+  }
+html>body .content {
+  width: 41%; /* ie5win fudge ends */
+  }
+
+  .content2 {
+  float: right;
+  padding: 10px 2% 10px 2%;
+  margin: 20px 2% 20px 1%;
+  background: #FFFFFF;
+  border: 5px solid #ccc;
+  width: 44%; /* ie5win fudge begins */
+  voice-family: "\"}\"";
+  voice-family:inherit;
+  width: 41%;
+  }
+html>body .content2 {
+  width: 41%; /* ie5win fudge ends */
+  }
