--- a/app/views/articles/index.erb
+++ b/app/views/articles/index.erb
@@ -1,10 +1,11 @@
-<div id="title-container">
-  <a href="https://imgur.com/C4h08Hg"><img class="emma-pic" src="https://i.imgur.com/C4h08Hg.jpg" title="source: imgur.com" /></a>
+<div id="header">
   <h1 class="title">Emma Bo Bemma</h1>
   <h4 class='subtitle'>Inside the life of the best dog in the world</h4>
 </div>
 
-<div class="table">
+<div class="first-content">
+  <a href="https://imgur.com/C4h08Hg"><img class="emma-pic" src="https://i.imgur.com/C4h08Hg.jpg" title="source: imgur.com" /></a>
+
 <button class="button"><%= link_to 'Write a New Post', new_article_path %></button>
 <table class="columns">
   <% @articles.each do |article| %>
