--- a/app/views/articles/show.erb
+++ b/app/views/articles/show.erb
@@ -1,30 +1,34 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
-<a href="https://imgur.com/lYtc1KU"><img class="emma-pic-show" src="https://i.imgur.com/lYtc1KU.jpg" title="source: imgur.com" /></a>
-<h2>Comments</h2>
-<%= render @article.comments %>
-
-<h2>Add a comment:</h2>
-<%= form_with(model: [ @article, @article.comments.build ]) do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
-
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
+<br><br><br>
+<div class="content">
+  <h1 class="title2">
+    <strong><%= @article.title %></strong>
+  </h1>
+  <a href="https://imgur.com/lYtc1KU"><img class="emma-pic-show" src="https://i.imgur.com/lYtc1KU.jpg" title="source: imgur.com" /></a>
+
+  <p class='paragraph'>
+    <%= @article.text %>
+  </p>
+</div>
+
+<div class="content2">
+  <h2>Comments</h2>
+  <%= render @article.comments %>
+
+  <h2>Add a comment:</h2>
+  <%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
+    <p>
+      <%= form.label :commenter %><br>
+      <%= form.text_field :commenter %>
+    </p>
+    <p>
+      <%= form.label :body %><br>
+      <%= form.text_area :body %>
+    </p>
+    <p>
+      <%= form.submit %>
+    </p>
+  <% end %>
+</div>
+
